# eth-validator-watcher

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  build.py  grafana_dashboard.json  justfile  liveness_check.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker.yaml  docker.yml  helm-chart.yaml  tests.yaml
charts/eth-validator-watcher/: Chart.yaml  README.md  values.yaml
charts/eth-validator-watcher/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  podmonitor.yaml  sa.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: api-reference.md  getting-started.md  index.md
etc/: .gitignore  config.local.yaml
eth_validator_watcher/: beacon.py  blocks.py  clock.py  coinbase.py  config.py  duties.py  entry_queue.py  entrypoint.py  entrypoint_v2.py  execution.py  exited_validators.py  fee_recipient.py  helpers.cc  log.py  metrics.py  missed_attestations.py  missed_blocks.py  missed_blocks_head.py  mod.cc  models.py  next_blocks_proposal.py  proposer_schedule.py  queues.py  relays.py  rewards.py  slashed_validators.py  suboptimal_attestations.py  utils.py  watched_validators.py  web3signer.py
eth_validator_watcher/tests/: test_entrypoint.py
eth_validator_watcher/tests/assets/: proposer_duties_6542.json  pubkeys.txt
grafana/: dashboard-breakdown.json  dashboard-overview.json
tests/: test_beacon.py  test_config.py  test_hexbits.py  test_sepolia.py
tests/assets/: config.null.yaml  config.sepolia.yaml  config.sepolia_replay_2_slots.yaml  config.sepolia_replay_5_slots.yaml  config.yaml  sepolia_header_4996301.json
tests/assets/cassettes/: test_sepolia.yaml
tests/beacon/: test_aggregate_attestations_from_previous_slot.py  test_get_active_index_to_pubkey.py  test_get_block.py  test_get_duty_slot_to_committee_index_to_validators_index.py  test_get_genesis.py  test_get_header.py  test_get_pending_index_to_pubkey.py  test_get_proposer_duties.py  test_get_rewards.py  test_get_status_to_index_to_pubkey.py  test_get_status_to_index_to_validator.py  test_get_validator_index_to_pubkey.py  test_get_validators_liveness.py  test_is_block_missed.py  test_potential_block.py
tests/coinbase/: test_emit_eth_usd_conversion_rate.py
tests/config/: .#test_load_config.py  test_load_config.py
tests/entry_queue/: test_compute_duration_sec.py  test_compute_optimistic_duration_sec.py  test_compute_pessimistic_duration_sec.py  test_compute_validators_churn.py  test_export_duration_sec.py  test_get_bucket_index.py
tests/entrypoint/: test__handler.py
tests/execution/: test_eth_get_block_by_hash.py
tests/exited_validators/: test_process_exited_validators.py
tests/fee_recipient/: test_process_fee_recipient.py
tests/missed_attestations/: test_missed_attestations.py  test_process_double_missed_attestations.py  test_process_missed_attestations.py
tests/missed_blocks/: test_missed_blocks.py  test_process_missed_blocks.py
tests/missed_blocks_finalized/: test_process_missed_blocks_finalized.py
tests/missed_blocks_head/: test_process_missed_blocks_head.py
tests/next_blocks_proposal/: test_next_blocks_proposal.py
tests/relays/: test_process.py
tests/rewards/: test_process_rewards.py  test_process_rewards_net.py  test_process_rewards_our.py
tests/slashed_validators/: test_process_slashed_validators.py
tests/suboptimal_attestations/: test_aggregate_attestations.py  test_suboptimal_attestations.py
tests/utils/: test_aggregate_bools.py  test_apply_mask.py  test_convert_hex_to_bools.py  test_convert_seconds_to_dhms.py  test_eth1_address_0x_prefixed.py  test_eth2_address_0x_prefixed.py  test_get_our_pubkeys.py  test_is_eth1_address.py  test_limited_dict.py  test_liveliness_file.py  test_liveness_file.py  test_load_pubkeys_from_file.py  test_remove_all_items_after_last_true.py  test_slack.py  test_switch_endianness.py  test_utils.py
tests/web3signer/: test_web3signer.py
(+22 files in other folders)
