[tool.poetry]
name = "eth-validator-watcher"
version = "0.1.0"
description = "Ethereum Validator Watcher"
authors = ["Manu NALEPA <emmanuel.nalepa@kiln.fi>"]
readme = "README.md"
packages = [{include = "eth_validator_watcher"}]

[tool.poetry.dependencies]
python = "^3.11"
more-itertools = "^9.1.0"
prometheus-client = "^0.17.0"
pydantic = "^2.0"
requests = "^2.31.0"
typer = "^0.9.0"
slack-sdk = "^3.21.3"
tenacity = "^8.2.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
requests-mock = "^1.10.0"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eth-validator-watcher = "eth_validator_watcher.entrypoint:app"
