[project]
name = "eth-validator-watcher"
version = "1.0.0-beta.6"
description = "Ethereum Validator Watcher"
authors = [
    {name = "Manu NALEPA", email = "emmanuel.nalepa@kiln.fi"},
    {name = "Sébastien Rannou", email = "mxs@kiln.fi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "more-itertools>=9.1.0",
    "prometheus-client>=0.17.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "slack-sdk>=3.21.3",
    "tenacity>=8.2.2",
    "pyyaml>=6.0.1",
    "pydantic-yaml>=1.2.0",
    "pydantic-settings>=2.1.0",
    "cachetools>=5.3.3",
    "pybind11>=2.12.0",
    "vcrpy>=6.0.1",
    "pytest-timeout>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.2.0",
    "black>=23.3.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.0.0",
    "requests-mock>=1.10.0",
    "freezegun>=1.2.2",
    "flake8>=7.2.0"
]

[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.12.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
eth-validator-watcher = "eth_validator_watcher.entrypoint:app"

[tool.setuptools]
packages = ["eth_validator_watcher"]
include-package-data = true

# Custom build script needs to be handled differently with setuptools
[tool.custom]
build-script = "build.py"
