[metadata]
name = eth_validator_watcher

[options]
packages = find:
install_requires =
    aiohttp-sse-client == 0.2.1
    async_lru == 1.0.3
    prometheus-client == 0.14.1
    pydantic == 1.9.1
    typer == 0.6.1

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pytest == 7.1.2
    pytest-aiohttp == 1.0.4
    pytest-cov == 3.0.0

[options.entry_points]
console_scripts =
    eth-validator-watcher = eth_validator_watcher.entrypoint:app
