[metadata]
name = eth_validator_watcher

[options]
packages = find:
install_requires =
    more-itertools == 8.14.0
    prometheus-client == 0.14.1
    pydantic == 1.9.1
    requests == 2.28.1
    sseclient-py == 1.7.2
    typer == 0.6.1

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pytest == 7.1.2
    pytest-cov == 3.0.0
    requests-mock == 1.10.0

[options.entry_points]
console_scripts =
    eth-validator-watcher = eth_validator_watcher.entrypoint:app
